# OpenSync-se106a

./: .clang-format  .gitignore  .travis.yml  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  Makefile  Makefile.am  README.md  build_dev.sh  childthreads.h  client.c  client.h  config.h  config.txt  configure.ac  configurer.c  configurer.h  configurer_test.c  crc32.c  dirmanager.h  filetree.c  filetree.h  filetree_test.c  install_libs.sh  ltc.sh  ltfm.sh  main.c  makefile.objdep.sh  mb.c  mb.h  mm.c  mm.h  mm_test.c  netwprot.c  netwprot.h  server.c  strings.c  strings.h  syncprot.c  (+5 more)
Include/: config.h  configurer_test.h  crc32.h  filetree_test.h  mm_test.h  server.h  strings.h  strings_test.h  xsocket.h
Source/: configurer.c  dirmanager.c  filetree.c  main.c  mb.c  mm.c  netwprot.c  strings_test.c  syncprot.c
testconfig/: config4.txt  config5.txt  config6.txt  config7.txt  config8.txt  config9.txt
