AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = OpenSync
OpenSync_SOURCES = configurer.c configurer_test.c crc32.c filetree.c filetree_test.c main.c mb.c mm.c mm_test.c strings.c strings_test.c transformcontainer.c config.h configurer.h configurer_test.h crc32.h filetree.h filetree_test.h mb.h mm.h mm_test.h strings.h strings_test.h transformcontainer.h
test:
	./OpenSync
