AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = OpenSync
OpenSync_SOURCES = childthreads.h client.c client.h config.h configurer.c configurer.h configurer_test.c configurer_test.h crc32.c crc32.h dirmanager.c dirmanager.h filetree.c filetree.h filetree_test.c filetree_test.h main.c mb.c mb.h mm.c mm.h mm_test.c mm_test.h server.c server.h strings.c strings.h strings_test.c strings_test.h syncprot.c syncprot.h transformcontainer.c transformcontainer.h
test:
	./OpenSync
